--- a/public/our_work_detail.html
+++ b/public/our_work_detail.html
@@ -3,7 +3,7 @@
 <meta charset="UTF-8">
 <title>New Earth Conversation</title>
 
-<link rel="stylesheet" href="css/our_work_detail.css.css">
+<link rel="stylesheet" href="css/our_work_detail.css">
 
 <!--    Bootstrap-->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -87,6 +87,14 @@
     </div>
     <div class="row">
         <div id="description"></div>
+    </div>
+    <hr id="line_video">
+    <div class="row">
+        <a id="video" href=""></a>
+    </div>
+    <hr id="line_bios">
+    <div class="row">
+        <div id="bios"></div>
     </div>
 </section>
 <div>
